@@ -67,6 +67,26 @@ namespace LinuxSampler { namespace sfz {
             
             void SetCCs(::sfz::Array<int>& pCC);
             void SetCCs(ArrayList< ::sfz::CC>& cc);
+            
+            inline int GetCurveCount();
+            inline ::sfz::Curve* GetCurve(int idx);
+    };
+    
+    class CurveCCUnit: public CCUnit {
+        public:
+            CurveCCUnit(SfzSignalUnitRack* rack, Listener* l = NULL): CCUnit(rack, l) { }
+            
+            virtual void Calculate() {
+                Level = 0;
+                for (int i = 0; i < Ctrls.size(); i++) {
+                    if (Ctrls[i].Value == 0) continue;
+                    if (Ctrls[i].Curve == -1) {
+                        Level += (Ctrls[i].Value / 127.0f) * Ctrls[i].Influence;
+                    } else {
+                        Level += GetCurve(Ctrls[i].Curve)->v[Ctrls[i].Value] * Ctrls[i].Influence;
+                    }
+                }
+            }
     };
     
     
@@ -277,7 +297,6 @@ namespace LinuxSampler { namespace sfz {
     };
     
     
-    
     class EndpointUnit: public EndpointSignalUnit {
         public:
             Voice* pVoice;
@@ -313,6 +332,10 @@ namespace LinuxSampler { namespace sfz {
             AmpLFOUnit   suAmpLFO;
             PitchLFOUnit suPitchLFO;
             FilLFOUnit   suFilLFO;
+            
+            // SFZ v2
+            
+            CurveCCUnit suVolOnCC;
             
             FixedArray<EGv2Unit*> EGs;
             
